# sp_test

./: CMakeLists.txt  test_open_device.c
